use includes, mobile version

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -49,131 +49,24 @@ class_2_spots:
           <p>GearFit allows you to avoid negative impacts to these critical areas:</p>
         </div>
       </div>
-      <div class="in-page-selection">
-        <div class="row">
-          <div class="col-md-3">
-            <ul>
-              <li
-                class='control-list-item'
-                tabindex="0"
-                data-controls="health">Health
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="10"
-                  height="17"
-                  viewBox="0 0 10 17"
-                  fill="none">
-                  <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                </svg>
-              </li>
-              <li
-                class='control-list-item'
-                tabindex="0"
-                data-controls="safety">Safety
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="10"
-                  height="17"
-                  viewBox="0 0 10 17"
-                  fill="none">
-                  <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                </svg>
-              </li>
-              <li
-                class='control-list-item'
-                tabindex="0"
-                data-controls="mission">Mission effectiveness
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="10"
-                  height="17"
-                  viewBox="0 0 10 17"
-                  fill="none">
-                  <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                </svg>
-              </li>
-              <li
-                class='control-list-item'
-                tabindex="0"
-                data-controls="quality">Quality of life
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="10"
-                  height="17"
-                  viewBox="0 0 10 17"
-                  fill="none">
-                  <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                </svg>
-              </li>
-              <li
-                class='control-list-item'
-                tabindex="0"
-                data-controls="money">
-                Money
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="10"
-                  height="17"
-                  viewBox="0 0 10 17"
-                  fill="none">
-                  <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                </svg>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6 controlled-item" data-id="health">
-            <h4 class="controlled-heading">Long-term health issues</h4>
-            <p>"The Joint Helmet Mounted Cueing System (JHMCS) has done irreparable damage to nearly every F-16 pilot I have flown with in my career. The price of addressing it will quickly be offset by
-              <b>preventing the loss of experienced pilots to neck issues</b>
-              and having to pay years of disability."</p>
-            <p class="quote-author">– F-16 Pilot</p>
-          </div>
-          <div class="col-md-3 controlled-item" data-id="health">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/health.png" alt="" />
-          </div>
 
-          <div class="col-md-6 controlled-item hidden" data-id="safety">
-            <h4 class="controlled-heading">Safety risks</h4>
-            <p>"Current Aircrew Eye and Respiratory Protection System (AERPS) gear poses a significant safety risk in the event of bailout and ejection via parachute. Even if the equipment is worn correctly, the straps can cover the parachute itself, preventing proper opening,
-              <b>which will almost certainly lead to death.</b>"</p>
-            <p class="quote-author">– AC-130 Aerial Gunner</p>
-          </div>
-          <div class="col-md-3 controlled-item" data-id="safety">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/safety.png" alt="" />
-          </div>
-
-          <div class="col-md-6 controlled-item hidden" data-id="mission">
-            <h4 class="controlled-heading">Decreased mission effectiveness</h4>
-            <p>"The standard ear-cups on my helmet are insufficient for me to accomplish my job effectively. They are uncomfortable, don't have a good enough seal on my ears so while performing duties on the tail of the aircraft,
-              <b>I can't hear radio and communications transmissions.</b>"</p>
-            <p class="quote-author">– CV-22 Special Mission Aviator</p>
-          </div>
-          <div class="col-md-3 controlled-item" data-id="mission">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/mission.png" alt="" />
-          </div>
-
-          <div class="col-md-6 controlled-item hidden" data-id="quality">
-            <h4 class="controlled-heading">Lower quality of life</h4>
-            <p>"The length and weight of the Eagle Combat Integrated Armor Carrier System (CIACS) vest is not conducive to my stature as a female in the pilot seat. The armor plate sits under my chin when I am seated due to my short torso, making mobility next to impossible.
-              <b>Moving the flight controls or accessing any equipment is incredibly difficult and unsafe.</b>"</p>
-            <p class="quote-author">– C-17 Pilot</p>
-          </div>
-          <div class="col-md-3 controlled-item" data-id="quality">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/quality.png" alt="" />
-          </div>
-
-          <div class="col-md-6 controlled-item hidden" data-id="money">
-            <h4 class="controlled-heading">Budget waste</h4>
-            <p>"The PACE ear protection system is very susceptible to damage.
-              <b>In just three months, I broke four of these externally-configured adaptors.</b>
-              I don't know one person who actively uses this product, which is not ideal because perception in the fighter cockpit is everything. The device must be reinforced or be capable of mounting in a different position to prevent such damage."</p>
-            <p class="quote-author">– B-2 Pilot</p>
-          </div>
-          <div class="col-md-3 controlled-item" data-id="money">
-            <img src="{{ site.baseurl }}/img/projects/gearfit/money.png" alt="" />
-          </div>
-        </div>
-      </div>
+      {% include in_page_select.html sections=site.data.pages.gearfit.section1 %}
+      {% for section in site.data.pages.gearfit.section1 %}
+        {% capture a_body %}
+          <h4 class="controlled-heading">{{ section.heading }}</h4>
+          {% if section.image %}
+            <img
+              src="{{ site.baseurl }}{{section.image}}"
+              style="max-width: 150px;"
+              alt="" />
+          {% endif %}
+          {{ section.body }}
+        {% endcapture %}
+        {% include accordion.html 
+         accordion_index=forloop.index
+         accordion_header=section.control
+         accordion_body= a_body %}
+      {% endfor %}
     </div>
   </div>
 
@@ -315,104 +208,25 @@ class_2_spots:
             <b>50+ gear improvement opportunities</b>
             — including procurement actions, gear requirement changes, safety updates, and technician training — and collected innovative suggestions for improving gear throughout the acquisition life cycle.
           </p>
-          <div class="in-page-selection">
-            <div class="row">
-              <div class="col-md-3">
-                <ul>
-                  <li
-                    class='control-list-item'
-                    tabindex="0"
-                    data-controls="health">Health
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="10"
-                      height="17"
-                      viewBox="0 0 10 17"
-                      fill="none">
-                      <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                    </svg>
-                  </li>
-                  <li
-                    class='control-list-item'
-                    tabindex="0"
-                    data-controls="safety">Safety
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="10"
-                      height="17"
-                      viewBox="0 0 10 17"
-                      fill="none">
-                      <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                    </svg>
-                  </li>
-                  <li
-                    class='control-list-item'
-                    tabindex="0"
-                    data-controls="mission">Mission effectiveness
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="10"
-                      height="17"
-                      viewBox="0 0 10 17"
-                      fill="none">
-                      <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                    </svg>
-                  </li>
-                  <li
-                    class='control-list-item'
-                    tabindex="0"
-                    data-controls="quality-of-life">Quality of life
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="10"
-                      height="17"
-                      viewBox="0 0 10 17"
-                      fill="none">
-                      <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                    </svg>
-                  </li>
-                  <li
-                    class='control-list-item'
-                    tabindex="0"
-                    data-controls="money">
-                    Money
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="10"
-                      height="17"
-                      viewBox="0 0 10 17"
-                      fill="none">
-                      <path d="M8.92105 9.03031L2.8478 15.1035C2.5549 15.3964 2.08002 15.3964 1.78715 15.1035L1.0788 14.3952C0.786397 14.1028 0.785835 13.6289 1.07755 13.3358L5.89071 8.49997L1.07755 3.66419C0.785835 3.37109 0.786397 2.89719 1.0788 2.60478L1.78715 1.89644C2.08005 1.60353 2.55493 1.60353 2.8478 1.89644L8.92102 7.96966C9.21393 8.26253 9.21393 8.73741 8.92105 9.03031Z" fill="#76767B" />
-                    </svg>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-9">
-                <div class="controlled-item" data-id="health">
-                  <h4 class="controlled-heading">Surfacing critical female fitment issues</h4>
-                  <p>
-                    A female pilot shared that she could not wear her parachute harness without significant pain and restriction of movement because the chest straps were cut too short by the manufacturer. A safe, short-term solution for a harness strap extender was crafted by MAJCOM gear reps while longer-term fixes are in progress.
-                  </p>
-                </div>
-                <div class="controlled-item hidden" data-id="safety">
-                  <h4 class="controlled-heading">Improving safety and mobility for smaller-stature pilots</h4>
-                  <p>Many aircrew, especially those with small stature, have submitted feedback in GearFit that their survival vests restrict mobility when flying, introducing significant safety concerns. Innovative pilots have contributed ideas within GearFit to make survival vests lighter, smaller, and more agile for when they're needed most.</p>
-                </div>
-                <div class="controlled-item hidden" data-id="mission">
-                  <h4 class="controlled-heading">Reducing bulk of life-preserver unit to increase mobility</h4>
-                  <p>Aircrew were experiencing restricted motion wearing their life-preserver unit (LPU), which prevented them from “checking their six” (looking behind them) in a dogfight. A gear technician at another base found a solution in packing the LPU to a certain thickness around the neck, a modification that’s being added to the Technical Order (TO) to address the issue for other aircrew.</p>
-                </div>
-                <div class="controlled-item hidden" data-id="quality-of-life">
-                  <h4 class="controlled-heading">Preventing bald spots for those with afro-textured hair</h4>
-                  <p>Some aircrew shared experiences with helmets causing bald spots in their afro-textured hair due to a lack of flight-approved hair wraps. These submissions shed light on a problem previously unknown to AF gear officials, who shared that "this is exactly the type of feedback we need."</p>
-                </div>
-                <div class="controlled-item hidden" data-id="money">
-                  <h4 class="controlled-heading">Ensuring proper ear protection installation</h4>
-                  <p>New ear protection devices were breaking down, causing the local flight equipment shops to use their funds to frequently replace these devices. A GearFit submission highlighted the issue, and gear experts investigated and remedied a training gap for the shop.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          {% include in_page_select.html sections=site.data.pages.gearfit.section2 %}
+          {% for section in site.data.pages.gearfit.section2 %}
+            {% capture a_body %}
+              <h4 class="controlled-heading">{{ section.heading }}</h4>
+              {% if section.image %}
+                <img
+                  src="{{ site.baseurl }}{{section.image}}"
+                  style="max-width: 150px;"
+                  alt="" />
+              {% endif %}
+              {{ section.body }}
+            {% endcapture %}
+            {% assign section_size = site.data.pages.gearfit.section1 | size %}
+            {% assign loop_index = forloop.index | plus: section_size %}
+            {% include accordion.html 
+             accordion_index= loop_index
+             accordion_header=section.control
+             accordion_body= a_body %}
+          {% endfor %}
         </div>
       </div>
     </div>
