rename files, fix bugs

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -32,7 +32,7 @@ class_2_spots:
           <a class="btn btn-purple font-weight-bold" href="{{ page.cta }}">Request a demo</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gear-fit-computer.png" alt="A computer showing the gearfit feedback page" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/landing-page.png" alt="" />
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gearfit-woman-computer.png" alt="Woman on computer" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/centralized-feedback.png" alt="" />
         </div>
       </div>
 
@@ -99,7 +99,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-1">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gearfit-tablet.png" alt="tablet with charts" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/data-analytics.png" alt="" />
         </div>
       </div>
 
@@ -111,7 +111,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-2 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gearfit-woman-computer-2.png" alt="Woman on computer reading information" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/workflow-mgmt.png" alt="" />
         </div>
       </div>
 
@@ -123,7 +123,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-1">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gearfit-tablet-2.png" alt="Tablet with information" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/gear-wiki.png" alt="" />
         </div>
       </div>
 
@@ -159,7 +159,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-3 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/Air_Force_Life_Cycle_Management_Center_-_Transparent 1.png" alt="Air force life cycle management center seal" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png" alt="Air force life cycle management center seal" />
         </div>
       </div>
       <div class="row mt-4 mt-sm-5 text">
