--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -9,6 +9,7 @@ class: ditap page-offering
 preload: hero-gearfit.svg
 class_1_spots:
 class_2_spots:
+cta: /connect/contact/?page=gearfit
 ---
 
 {% include hero_banner.html
@@ -32,7 +33,7 @@ class_2_spots:
           <a class="btn btn-purple font-weight-bold" href="{{ page.cta }}">Request a demo</a>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/landing-page.png" alt="" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/landing-page.svg" alt="" />
         </div>
       </div>
     </div>
@@ -85,7 +86,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/centralized-feedback.png" alt="" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/centralized-feedback.svg" alt="" />
         </div>
       </div>
 
@@ -99,7 +100,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-1">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/data-analytics.png" alt="" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/data-analytics.svg" alt="" />
         </div>
       </div>
 
@@ -111,7 +112,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-2 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/workflow-mgmt.png" alt="" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/workflow-mgmt.svg" alt="" />
         </div>
       </div>
 
@@ -123,7 +124,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-1 order-md-1">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/gear-wiki.png" alt="" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/gear-wiki.svg" alt="" />
         </div>
       </div>
 
@@ -135,7 +136,7 @@ class_2_spots:
           </p>
         </div>
         <div class="col-md-6 order-2 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/flexible-platform.png" alt="placeholder" />
+          <img src="{{ site.baseurl }}/img/projects/gearfit/svg/flexible-platform.svg" alt="placeholder" />
         </div>
       </div>
     </div>
