--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -43,7 +43,7 @@ cta: /connect/contact/?page=gearfit
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-12 order-2 order-md-1 mt-4 mt-md-0">
-          <h2 id="procurement">Tackle your toughest gear challenges</h2>
+          <h2 id="procurement" class="mb-4">Tackle your toughest gear challenges</h2>
           <p>
             Without the ability to collect, manage, and respond to feedback from the field well, your organization runs the risk of supplying gear that's ill-fitting, ineffective, and misused.
           </p>
@@ -74,7 +74,7 @@ cta: /connect/contact/?page=gearfit
   <div class="mt-6">
     <div class="grid-container prose">
       <div class="row">
-        <div class="col-md-12 mt-4 mt-md-0">
+        <div class="col-md-12 mt-4 mt-md-0 mb-4">
           <h2>What GearFit offers your organization</h2>
         </div>
       </div>
@@ -93,7 +93,7 @@ cta: /connect/contact/?page=gearfit
       <div class="row mt-4">
         <div class="col-md-6 order-2 order-md-2 mt-4 mt-md-0">
           <h3>Data analytics and AI
-            <span class='round-purple'>Coming soon!</span>
+            <span class='round-purple ml-2'>Coming soon!</span>
           </h3>
           <p>
             Surface priority gear problems, identify trends, and make data-driven decisions with analytics tools. Easily manage feedback at scale by leveraging conversational AI, large language models, and natural language processing.
@@ -152,7 +152,7 @@ cta: /connect/contact/?page=gearfit
       <div class="row">
         <div class="col-md-9 order-2 order-md-1 mt-4 mt-md-0">
           <h3 id="human_systems_divisions">U.S. Air Force - Human Systems Division</h3>
-          <p>
+          <p class="gearfit-caption-text">
             Agile Combat Support (ACS) Directorate, Air Force Life Cycle Management Center (AFLCMC)
           </p>
           <p>
@@ -163,7 +163,7 @@ cta: /connect/contact/?page=gearfit
           <img src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png" alt="Air force life cycle management center seal" />
         </div>
       </div>
-      <div class="row mt-4 mt-sm-5 text">
+      <div class="row text">
         <div class="callout callout--gear-fit">
           <h3>Challenges</h3>
           <ul>
@@ -180,7 +180,7 @@ cta: /connect/contact/?page=gearfit
         </div>
       </div>
 
-      <div class="row mt-4 mt-sm-5 text">
+      <div class="row text">
         <div class="callout callout--gear-fit">
           <h3>Solutions</h3>
           <ul>
@@ -200,7 +200,7 @@ cta: /connect/contact/?page=gearfit
         </div>
       </div>
 
-      <div class="row mt-4 mt-sm-5 text">
+      <div class="row text">
         <div class="callout callout--gear-fit">
           <h3>GearFit's impact</h3>
           <p>
@@ -233,4 +233,4 @@ cta: /connect/contact/?page=gearfit
     </div>
   </div>
 </div>
-{% include hire_us_cta.html %}
+{% include gearfit_cta.html %}
