working through changes

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -160,7 +160,10 @@ cta: /connect/contact/?page=gearfit
           </p>
         </div>
         <div class="col-md-3 order-1 order-md-2">
-          <img src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png" alt="Air force life cycle management center seal" />
+          <img
+            class="mobile-width"
+            src="{{ site.baseurl }}/img/projects/gearfit/aflmc-logo.png"
+            alt="Air force life cycle management center seal" />
         </div>
       </div>
       <div class="row text">
